fixing whitespace at bottom of contact section

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -10,12 +10,12 @@
   @include mixins.flex(center, space-around, column);
   &:after {
     content: "";
-    height: 6vh;
+    min-height: 15vh;
     width: 100%;
     z-index: -5;
     background-color: #421750;
     position: absolute;
-    bottom: -5%;
+    bottom: -15%;
     overflow: hidden;
   }
 }
@@ -124,5 +124,12 @@
 
   .form-textbox {
     height: 10rem;
+  }
+
+  .contact {
+    &:after {
+      bottom: -10%;
+      overflow: hidden;
+    }
   }
 }
