--- a/styles/styles.css
+++ b/styles/styles.css
@@ -646,12 +646,12 @@
 }
 .contact:after {
   content: "";
-  height: 6vh;
+  min-height: 15vh;
   width: 100%;
   z-index: -5;
   background-color: #421750;
   position: absolute;
-  bottom: -5%;
+  bottom: -15%;
   overflow: hidden;
 }
 
@@ -762,6 +762,11 @@
 
   .form-textbox {
     height: 10rem;
+  }
+
+  .contact:after {
+    bottom: -10%;
+    overflow: hidden;
   }
 }
 * {
